- Update app color. - Validate form field.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">CMMC IoT Switch</string>
     <string name="title_activity_configuration">Configuration</string>
+    <string name="error_field_required">This field is required.</string>
 </resources>
