Update package name.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
-    <string name="app_name">CMMC IoT Switch</string>
+    <string name="app_name">IoT Switch</string>
     <string name="title_activity_configuration">Configuration</string>
     <string name="error_field_required">This field is required.</string>
+    <string name="action_save">Save</string>
+    <string name="action_config">Config</string>
 </resources>
